---
source: tests/lexer_integration.rs
expression: "format!(\"{:#?}\", actual_token_types.to_owned())"
---
[
    LineComment(
        "Variable declarations and type inference",
    ),
    NewLine,
    Const,
    Id(
        "int",
    ),
    Id(
        "MAX",
    ),
    Eq,
    Int(
        100,
    ),
    NewLine,
    Id(
        "int",
    ),
    Id(
        "explicit",
    ),
    Eq,
    Int(
        42,
    ),
    NewLine,
    Auto,
    Id(
        "inferred",
    ),
    Eq,
    Float(
        4.89,
    ),
    NewLine,
    Auto,
    Id(
        "name",
    ),
    Eq,
    Str(
        "Mux",
    ),
    NewLine,
    NewLine,
    Auto,
    OpenParen,
    Id(
        "x",
    ),
    Comma,
    Underscore,
    CloseParen,
    Eq,
    OpenParen,
    Int(
        1,
    ),
    Comma,
    Int(
        2,
    ),
    CloseParen,
    LineComment(
        "underscore usage",
    ),
    NewLine,
    Auto,
    Id(
        "flag",
    ),
    Eq,
    Bool(
        true,
    ),
    NewLine,
    Auto,
    Id(
        "otherflag",
    ),
    Eq,
    Bool(
        false,
    ),
    NewLine,
]
